--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 main:
-  - title: "Weekly Posts"
-    url: /posts/
   - title: "Draft Guide"
+    url: /posts/
+  - title: "Weekly FF Analysis"
     url: /categories/
   - title: "Rankings"
     url: /tags/
