--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,10 @@ timezone: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
-  - assets/images
+  - _data
+  - _layouts
+  - _posts
+  - assets
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
