--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ plugins:
 author:
   name   : "Jake Mammen"
   avatar : "/assets/images/Profile_Pic.png"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "I am a dedicated fantasy football enthusiast with a passion for analyzing statistics to optimize performance and increase winning potential. While not a professional expert, I am a committed fantasy football aficionado eager to share insights to help you succeed in your leagues."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
