--- a/_config.yml
+++ b/_config.yml
@@ -68,18 +68,21 @@ author:
   avatar : "/assets/images/Profile_Pic.png"
   bio    : "I am a dedicated fantasy football enthusiast with a passion for analyzing statistics to optimize performance and increase winning potential. While not a professional expert, I am a committed fantasy football aficionado eager to share insights to help you succeed in your leagues."
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
+    #- label: "Website"
+    #  icon: "fas fa-fw fa-link"
+    #  url: "https://"
+    - label: "Fantasy Sports Pack X Page"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://x.com/FantasySPack"
+    - label: "Personal X Page"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://x.com/jakemammenwx"
+    #- label: "GitHub"
+    #  icon: "fab fa-fw fa-github"
+    #  url: "https://github.com/"
+    #- label: "Instagram"
+    #  icon: "fab fa-fw fa-instagram"
+    #  url: "https://instagram.com/"
 
 footer:
   links:
