--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: splash
       author_profile: true
       show_date: true
       read_time: true
