--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,6 @@ timezone: America/Chicago
 include:
   - _pages
   - _data
-  - _layouts
   - _posts
   - assets
 
@@ -102,7 +101,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: splash
+      layout: single
       author_profile: true
       show_date: true
       read_time: true
