--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,6 @@ footer:
       url: "https://instagram.com/"
 
 defaults:
-  # _posts
   - scope:
       path: ""
       type: posts
@@ -109,12 +108,17 @@ defaults:
       comments: true
       share: true
       related: true
-  # _pages
   - scope:
       path: "_pages"
       type: pages
     values:
       layout: single
+      author_profile: true
+  - scope:
+      path: "index.md"
+      type: pages
+    values:
+      layout: splash
       author_profile: true
 
 category_archive:
