--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: splash
+      layout: single
       author_profile: true
       show_date: true
       read_time: true
@@ -112,7 +112,7 @@ defaults:
       path: "_pages"
       type: pages
     values:
-      layout: splash
+      layout: single
       author_profile: true
   - scope:
       path: "index.md"
