--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,9 @@ github_username: username
 minimal_mistakes_skin: dark
 search: true
 
+head_scripts:
+  - "{{ '/assets/css/tables.css' | relative_url }}"
+  
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
